<resources>
    <!-- Titles -->
    <string name="app_name">WG-App</string>
    <string name="title_budget">Budget</string>
    <string name="title_stocks">Stocks</string>
    <string name="title_resources">Ressourcen</string>
    <string name="title_settings">Settings</string>
    <string name="title_event_log">Event Log</string>
    <string name="title_lock_creation">Lock Erstellung</string>
        <string name="title_res_creation">Ressourcen Erstellung</string>

    <string name="google_greeting_sign_in">Willkommen  </string>
    <string name="my_greeting_sign_in">Melde dich gleich mit deinem Google Account an um loszulegen!</string>

    <string name="sign_in">Anmelden </string>
    <string name="signed_out">abgemeldet </string>
    

    <!-- Invitation -->
    <string name="create_com">erstellen</string>
    <string name="join_com">WG beitreten</string>
    <string name="join">beitreten</string>
    <string name="sign_out">abmelden</string>
    <string name="wg_link">WG ID</string>
    <string name="join_com_banner">WG ID in in die Textbox einfügen</string>
    <string name="comName">WG Name</string>



    <!-- Stock -->
    <string name="scan_last_input">Mit Barcode suchen</string>
    <string name="StockCreationTextName">Stock Name</string>
    <string name="StockType">Stock Typ</string>
    <string name="StockCreationTotalCostText">Kosten</string>
    <string name="StockCreationTotalAmountText">Anzahl</string>
    <string name="StockCreationBarcodeText">Barcode</string>
    <string name="PasteBarcode">Barcode einfügen</string>
    <string name="StockCreationCreate">Stock erstellen</string>

<!-- Budget -->


<!-- Settings -->



<!-- Ressources -->
    <string name="resInputName">Ressourcenname </string>
    <string name="LockInputName">Lock Beschreibung </string>

    <string name="LockInputTime">Lock Dauer in Minuten</string>

    <string name="LockInputDate">Lock Datum</string>





<!-- misc -->

    <string name="already_joined">Already Joined propaply delete me</string>


    <string name="accept">Annehmen</string>
    <string name="decline">Ablehnen</string>

    <string name="create_share">Create and Share</string>

    <string name="logout">Logout</string>
    <string name="event_log">Event Log</string>
    <string name="share_invit_link">Share Invitation Link</string>
    <string name="retrieve_user_data">Retrieve Userdata</string>
    <string name="delete_user_data">Delete Userdata</string>



    <string name="desc_firebase_lockup">desc_firebase_lockup out</string>
    <string name="firebaseui_title_text">desc_firebase_lockup out</string>

    <string name="disconnect">disconnect out</string>
    <string name="google_title_text">google_title_text out</string>
    <string name="permission_camera_rationale">Permission for camera</string>
    <string name="ok">ok</string>
    <string name="low_storage_error">no space</string>
    <string name="no_camera_permission">no camera permission</string>

</resources>
