<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_budget">

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.example.wgapp.ui.budget.BudgetFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_stocks"
        android:name="com.example.wgapp.ui.stocks.StocksFragment"
        android:label="@string/title_stocks"
        tools:layout="@layout/fragment_stocks" />

    <fragment
        android:id="@+id/navigation_resources"
        android:name="com.example.wgapp.ui.resources.ResourcesFragment"
        android:label="@string/title_resources"
        tools:layout="@layout/fragment_resources" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.wgapp.ui.resources.ResourcesFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>