<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/LockInputDate"
        android:onClick="pickDate"
        android:layout_gravity="center_horizontal"

        android:theme="@style/ThemeOverlay.MyDarkButton" />

    <EditText
        android:id="@+id/LockInputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:inputType="datetime"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"

        style="@style/ThemeOverlay.MyTextDetail"
        android:text="@string/LockInputTime" />


    <EditText
        android:id="@+id/LockInputTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:inputType="numberSigned"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"

        style="@style/ThemeOverlay.MyTextDetail"
        android:text="@string/LockInputName" />
    <EditText
        android:id="@+id/LockInputDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />






    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/create_com"
        android:onClick="createLock"
        android:layout_gravity="center_horizontal"

        android:theme="@style/ThemeOverlay.MyDarkButton" />


</LinearLayout>